<ScrollView android:id="@+id/scrollMainPanel"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/panel_background"
    app:behavior_hideable="false"
    app:behavior_peekHeight="200dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin">

        <TextView
            android:id="@+id/txtTourTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/text_large"
            android:textColor="@color/text_title" />

        <TextView
            android:id="@+id/txtRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4/5"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/text_subtitle"
            app:layout_constraintTop_toBottomOf="@id/txtTourTitle"
            android:drawableStart="@drawable/ic_star"
            android:drawableTint="@color/ratingIcon" />

        <TextView
            android:id="@+id/txtPriceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textSize="@dimen/text_medium"
            app:layout_constraintEnd_toStartOf="@id/txtPrice"
            app:layout_constraintBottom_toBottomOf="@id/txtPrice" />

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$15.5"
            android:textSize="@dimen/text_large"
            android:textColor="@color/text_subtitle"
            app:layout_constraintTop_toBottomOf="@id/txtTourTitle"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/viewSeparator1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            android:background="@color/separator"
            app:layout_constraintTop_toBottomOf="@id/txtPrice"
            android:layout_marginTop="@dimen/half_margin" />

        <Button
            android:id="@+id/btnBookNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/book_now"
            android:drawableTop="@drawable/ic_book"
            android:drawableTint="@color/colorPrimary"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/viewSeparator1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnAddToWishList"
            android:layout_marginTop="@dimen/margin" />

        <Button
            android:id="@+id/btnAddToWishList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/add_to_wishlist"
            android:drawableTop="@drawable/ic_add_wishlist"
            android:drawableTint="@color/colorPrimary"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/viewSeparator1"
            app:layout_constraintStart_toEndOf="@id/btnBookNow"
            app:layout_constraintEnd_toStartOf="@id/btnShare"
            android:layout_marginTop="@dimen/margin" />

        <Button
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/share"
            android:drawableTop="@drawable/ic_share"
            android:drawableTint="@color/colorPrimary"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/viewSeparator1"
            app:layout_constraintStart_toEndOf="@id/btnAddToWishList"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin" />

        <View
            android:id="@+id/viewSeparator2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            android:background="@color/separator"
            app:layout_constraintTop_toBottomOf="@id/btnBookNow"
            android:layout_marginTop="@dimen/half_margin" />

        <TextView
            android:id="@+id/txtTourDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_description"
            app:layout_constraintTop_toBottomOf="@+id/viewSeparator2"
            android:layout_marginTop="@dimen/half_margin" />

        <View
            android:id="@+id/viewSeparator3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            android:background="@color/separator"
            app:layout_constraintTop_toBottomOf="@id/txtTourDescription"
            android:layout_marginTop="@dimen/half_margin" />

        <TextView
            android:id="@+id/txtReviewsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/text_title"
            app:layout_constraintTop_toBottomOf="@+id/viewSeparator3"
            android:layout_marginTop="@dimen/half_margin" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerReviewsPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txtReviewsLabel"
            tools:listitem="@layout/reviews_item" />

        <ProgressBar
            android:id="@+id/progressBarReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundTint="@color/colorPrimary"
            android:foregroundTintMode="add"
            app:layout_constraintTop_toTopOf="@id/recyclerReviewsPreview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnSeeAllReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/see_all_reviews"
            android:drawableEnd="@drawable/ic_arrow"
            android:gravity="start|center_vertical"
            android:textSize="@dimen/text_medium"
            android:textAllCaps="false"
            android:drawableTint="@color/text_subtitle"
            app:layout_constraintTop_toBottomOf="@+id/recyclerReviewsPreview" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>